# gltp-static-generator

./: LICENSE  README.md  pyproject.toml  utils.py
templates/: base.html  book.html  chapter.html  index.html  page.html  section.html  sentence.html  speech.html  verse.html  work.html
