[tool.poetry]
name = "gltp-static-generator"
version = "0.1.0"
description = ""
authors = ["James Tauber <jtauber@jtauber.com>"]

[tool.poetry.dependencies]
python = "^3.8"
roman-numerals = "^0.1.0"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
